--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.5",
     "prettier": "^2.6.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-query": "4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
