--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress run"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "cypress": "^9.5.4",
     "next": "12.1.5",
     "prettier": "^2.6.2",
     "react": "18.0.0",
